force-app/main/default/objects/Booking__c/fields/Allocation_Details__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Details__c</fullName>
    <label>Allocation_Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>