force-app/main/default/objects/Booking__c/fields/Booking_Reference__c.field-meta.xml
<CustomField>
    <fullName>Booking_Reference__c</fullName>
    <displayFormat>BR-{00000}</displayFormat>
    <label>Booking_Reference</label>
    <type>AutoNumber</type>
</CustomField>