force-app/main/default/objects/Booking__c/fields/Booking_Source__c.field-meta.xml
<CustomField>
    <fullName>Booking_Source__c</fullName>
    <label>Booking_Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Window Ticket</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>