force-app/main/default/objects/Booking__c/fields/Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Date__c</fullName>
    <label>Cancellation_Date</label>
    <type>DateTime</type>
</CustomField>