force-app/main/default/objects/Booking__c/fields/Coach_Type__c.field-meta.xml
<CustomField>
    <fullName>Coach_Type__c</fullName>
    <label>Coach_Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st AC (1A)</fullName>
            </value>
            <value>
                <fullName>2nd AC (2A)</fullName>
            </value>
            <value>
                <fullName>3rd AC (3A)</fullName>
            </value>
            <value>
                <fullName>Sleeper (SL)</fullName>
            </value>
            <value>
                <fullName>Chair Car (CC)</fullName>
            </value>
            <value>
                <fullName>2nd Sitting (2S)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>