force-app/main/default/objects/Booking__c/fields/Confirmed_Seats__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Seats__c</fullName>
    <label>Confirmed_Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>