force-app/main/default/objects/Booking__c/fields/Destination_Station__c.field-meta.xml
<CustomField>
    <fullName>Destination_Station__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination_Station</label>
    <referenceTo>Station__c</referenceTo>
    <relationshipLabel>Bookings (Destination_Station)</relationshipLabel>
    <relationshipName>Bookings1</relationshipName>
    <type>Lookup</type>
</CustomField>