force-app/main/default/objects/Booking__c/fields/Special_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Special_Requirements__c</fullName>
    <label>Special_Requirements</label>
    <type>TextArea</type>
</CustomField>