force-app/main/default/objects/Booking__c/fields/Total_Passengers__c.field-meta.xml
<CustomField>
    <fullName>Total_Passengers__c</fullName>
    <label>Total_Passengers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>