force-app/main/default/objects/Booking__c/fields/Train__c.field-meta.xml
<CustomField>
    <fullName>Train__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Train</label>
    <referenceTo>Train__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>