force-app/main/default/objects/Booking__c/fields/Waitlisted_Seats__c.field-meta.xml
<CustomField>
    <fullName>Waitlisted_Seats__c</fullName>
    <label>Waitlisted_Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>